
* GITHUB#12829: IndexWriter#addDocuments or IndexWriter#updateDocuments now require a parent field name to be
  specified in IndexWriterConfig is documents blocks are indexed and index time sorting is configured. (Simon Willnauer)

* GITHUB#13230: Remove the Kp and Lovins snowball algorithms which are not supported
  or intended for general use. (Robert Muir)

Other
---------------------

* GITHUB#13459: Merges all immutable attributes in FieldInfos.FieldNumbers into one Hashmap saving
  memory when writing big indices. Fixes an exotic bug when calling clear where not all attributes
  were cleared. (Ignacio Vera)

* LUCENE-10376: Roll up the loop in VInt/VLong in DataInput. (Guo Feng)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.
  All classes in `org.apache.lucene.analysis.[ja|ko].util` was moved to `org.apache.lucene.analysis.[ja|ko].dict`.
  (Tomoko Uchida)

* LUCENE-10493: Factor out Viterbi algorithm in Kuromoji and Nori to analysis-common. (Tomoko Uchida)

* GITHUB#977, LUCENE-9500: Remove the deflater hack introduced because of JDK-8252739 (Uwe Schindler)

* GITHUB#11960: Hunspell: supported empty dictionaries (Peter Gromov)

* GITHUB#12239: Hunspell: reduced suggestion set dependency on the hash table order (Peter Gromov)

* GITHUB#9049: Fixing bug in UnescapedCharSequence#toStringEscaped() (Jakub Slowinski)

* GITHUB#13001: Put Thread#sleep() on the list of forbidden APIs. (Shubham Chaudhary)

* GITHUB#12753: Bump minimum required Java version to 21
  (Chris Hegarty, Robert Muir, Uwe Schindler)

* GITHUB#13296: Convert the FieldEntry, a static nested class, into a record. (Sanjay Dutt)

* GITHUB#13332: Improve MissingDoclet linter to check records correctly. (Uwe Schindler)
